fix overflow issue

--- a/src/_includes/css/theme.css
+++ b/src/_includes/css/theme.css
@@ -46,6 +46,7 @@ body {
 main {
   --flow-space: var(--gutter);
   --dot-shadow-size: 0.75em;
+  overflow:hidden;
 }
 
 main > * {
